# fractol_C

./: CMakeLists.txt  Makefile  README.md  fractol_C
includes/: fractol.h  keyx.h
src/: celtic_mandelbrot.c  celtic_set.c  draw.c  four_mandelbrot_set.c  fractal_tools.c  fractol.c  fractol.h  heart_set.c  hook.c  image.c  julia_set.c  main.c  mandelbrot_set.c  mlx.c  mlx_image.c  new_vector.c  perpen_celtic_set.c  perpendicular_mandelbrot_set.c  threads.c  tricorn_set.c  window.c
